--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>GameHub</h3>
+                    <h3>GameArena</h3>
                     <p>The ultimate destination for neon gaming experiences and digital excitement.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -338,7 +338,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 GameHub Legends. All Rights Reserved.</p>
+                <p>&copy; 2026 GameArena Legends. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
